  the route, and ships added with system.addGroupToRoute() are clustered.
* JavaScript SystemInfo systemsInRange() once again works as an instance method
  (which is now the recommended usage).
* New ship event entityDestroyed(). This fires immediately after the ship
  becomes invalid, regardless of the reason, except when the game restarts.
* Mission screens can now be run in flight without generating warnings about
  the player being both docked and not docked. (Bug #17953)

-------------------------------------------------------------------------------

Changes between Oolite 1.74.2 and Oolite 1.75:

Gameplay:
* Smarter, more aggressive NPCs - for example, they are now able to shoot you
  when you cunningly stand still.
* New master weapon lock key (default: _) disables primary and secondary
  weapons, and turrets.
* Simplified autopilot controls: C (or key_autopilot) attempts to autopilot-
  dock with the current target station - your target if any, otherwise a
  station within scanner range, favouring the main station. Shift-C (now
  key_autodock instead of key_autopilot_target) is the same, except it will
  fast-dock if permitted. Shift-D is no longer used.
* New "primable equipment" concept: equipment can produce scripted effects
  without having to be a missile. New keys: Shift-N and Control-Shift-N cycle
  through the list of primable equipment, and N activates the currently selected
  equipment. (Key config keys: key_prime_equipment, key_activate_equipment.)
* Target-sensitive reticle mode is now more accurate.
* Fuel price now depends on the mass of your ship.
* Jumping between overlapping systems now uses 0.1 LY worth of fuel.
* A hyperspace misjump now takes 3/4 of the time of a successful jump, rather
  than the full time. (It has to be at least 3/4 to avoid exploits. See
  http://aegidian.org/bb/viewtopic.php?t=7917 for more information.)
* The trumble offer "mission" now repeats as intended, in case you accidentally
  missed it.